--- a/co2516/Markscheme 1 - Documentation.html
+++ b/co2516/Markscheme 1 - Documentation.html
@@ -1,4 +1,4 @@
-64<HTML>
+<HTML>
 <head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   <link rel="stylesheet" type="text/css" href="https://martinbateman.github.io/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -61,8 +61,8 @@ This page does not save your settings
 var worth = ((20/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 0;
+maxY = 0;
 </script>
 
   
@@ -74,8 +74,8 @@ maxY = ;
 var worth = ((20/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 1;
+maxY = 0;
 </script>
 
   
@@ -87,8 +87,8 @@ maxY = ;
 var worth = ((20/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 2;
+maxY = 0;
 </script>
 
   
@@ -100,8 +100,8 @@ maxY = ;
 var worth = ((20/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 3;
+maxY = 0;
 </script>
 
   
@@ -113,8 +113,8 @@ maxY = ;
 var worth = ((20/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 4;
+maxY = 0;
 </script>
 
   
@@ -126,8 +126,8 @@ maxY = ;
 var worth = ((20/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-0");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 5;
+maxY = 0;
 </script>
 
   
@@ -143,8 +143,8 @@ maxY = ;
 var worth = ((40/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 0;
+maxY = 1;
 </script>
 
   
@@ -156,8 +156,8 @@ maxY = ;
 var worth = ((40/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 1;
+maxY = 1;
 </script>
 
   
@@ -169,8 +169,8 @@ maxY = ;
 var worth = ((40/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 2;
+maxY = 1;
 </script>
 
   
@@ -182,8 +182,8 @@ maxY = ;
 var worth = ((40/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 3;
+maxY = 1;
 </script>
 
   
@@ -195,8 +195,8 @@ maxY = ;
 var worth = ((40/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 4;
+maxY = 1;
 </script>
 
   
@@ -208,8 +208,8 @@ maxY = ;
 var worth = ((40/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-1");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 5;
+maxY = 1;
 </script>
 
   
@@ -227,8 +227,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 0;
+maxY = 2;
 </script>
 
   
@@ -242,8 +242,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 1;
+maxY = 2;
 </script>
 
   
@@ -257,8 +257,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 2;
+maxY = 2;
 </script>
 
   
@@ -272,8 +272,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 3;
+maxY = 2;
 </script>
 
   
@@ -287,8 +287,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 4;
+maxY = 2;
 </script>
 
   
@@ -302,8 +302,8 @@ Sources are described and commented on.</TD>
 var worth = ((30/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-2");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 5;
+maxY = 2;
 </script>
 
   
@@ -319,8 +319,8 @@ maxY = ;
 var worth = ((10/100) * 20)/ 80 * 100;
 var target = document.getElementById ("0-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 0;
+maxY = 3;
 </script>
 
   
@@ -332,8 +332,8 @@ maxY = ;
 var worth = ((10/100) * 40)/ 80 * 100;
 var target = document.getElementById ("1-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 1;
+maxY = 3;
 </script>
 
   
@@ -345,8 +345,8 @@ maxY = ;
 var worth = ((10/100) * 50)/ 80 * 100;
 var target = document.getElementById ("2-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 2;
+maxY = 3;
 </script>
 
   
@@ -358,8 +358,8 @@ maxY = ;
 var worth = ((10/100) * 60)/ 80 * 100;
 var target = document.getElementById ("3-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 3;
+maxY = 3;
 </script>
 
   
@@ -371,8 +371,8 @@ maxY = ;
 var worth = ((10/100) * 70)/ 80 * 100;
 var target = document.getElementById ("4-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 4;
+maxY = 3;
 </script>
 
   
@@ -384,8 +384,8 @@ maxY = ;
 var worth = ((10/100) * 80)/ 80 * 100;
 var target = document.getElementById ("5-3");
 target.setAttribute ("name", worth);
-maxX = ;
-maxY = ;
+maxX = 5;
+maxY = 3;
 </script>
 
   
