Update Lab 3 - Creating Usernames.html

--- a/co2516/Lab 3 - Creating Usernames.html
+++ b/co2516/Lab 3 - Creating Usernames.html
@@ -44,10 +44,10 @@ make sense (i.e. that they are valid) and it will produce a username for the use
 <div class="subtitle">Instructions</div>
 
 <p>
-In your Windows 10 Virtual Machine download and install Python 3.6 x86 MSI Installer from <a href="https://www.activestate.com/products/activepython/downloads/">here</a>.
+In your Windows 10 Virtual Machine download and install Python 3.7 Installer from <a href="http://python.org/">here</a>.
 </p>
 <p>
-The editor for Python is called Idle. You can use it to write and run Python programs. Since Python is a scripting
+The editor for Python is called IDLE. Once Python has finished installing using the search tool to start IDLE. You can use it to write and run Python programs. Since Python is a scripting
 language there is no need to compile your program before running it. Start IDLE. First it will show you the Python shell. Select File then New.
 You will see a blank window that looks a little like notepad. Type the progam as shown below
 </p>
