Update Lab 8 - Web Server Configuration.html

--- a/co3509/Lab 8 - Web Server Configuration.html
+++ b/co3509/Lab 8 - Web Server Configuration.html
@@ -74,10 +74,10 @@ This creates a www.uclan.ac.uk directory in your home directory that contains a 
 
 <li>Deploy the website mirror into apache.
 <p>
-mb@www1:~$ cp -R www.uclan.ac.uk/* /var/www/
+mb@www1:~$ sudo cp -R www.uclan.ac.uk/* /var/www/html/
 </p>
 <p>
-mb@www2:~$ cp -R www.uclan.ac.uk/* /var/www/
+mb@www2:~$ sudo cp -R www.uclan.ac.uk/* /var/www/html/
 </p>
 </li>
 <div class="collapsible">&nbsp;</div>
@@ -86,10 +86,10 @@ mb@www2:~$ cp -R www.uclan.ac.uk/* /var/www/
 
 <li>Test that you are able to access the content from the client using a web browser. Debug any problems and repeat the procedure for the second web server.
 <p>
-mb@www1:~$ cp -R www.uclan.ac.uk/* /var/www/
+mb@www1:~$ cp -R www.uclan.ac.uk/* /var/www/html/
 </p>
 <p>
-mb@www2:~$ cp -R www.uclan.ac.uk/* /var/www/
+mb@www2:~$ cp -R www.uclan.ac.uk/* /var/www/html/
 </p>
 </li>
 <div class="collapsible">&nbsp;</div>
