Updated with new url

--- a/co2516/Lab 7 - Storage.html
+++ b/co2516/Lab 7 - Storage.html
@@ -133,7 +133,7 @@ by creating a shared network drive.
 </p>
 
 <div class="subtitle">Advanced</div>
-  <li>Use the article <a href="http://thesolving.com/server-room/how-to-enable-roaming-profiles-on-windows-server-2012-r2/">here</a> to enable roaming profiles for your users.
+  <li>Use the article <a href="https://thesolving.com/server-room/how-to-enable-roaming-profiles-on-windows-server-2012-r2/">here</a> to enable roaming profiles for your users.
 </li>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
