Update Lab 7 - Storage.html

--- a/co2516/Lab 7 - Storage.html
+++ b/co2516/Lab 7 - Storage.html
@@ -127,7 +127,7 @@ Follow the instructions <a href="https://thesolving.com/storage/how-to-create-an
 
 <div class="subtitle">Mounting the iSCSI drive</div>
 <p>
-Follow the instructions <a href="http://windowsitpro.com/storage/example-how-configure-iscsi-storage">here</a>
+Follow the instructions <a href="http://thesolving.com/storage/how-to-create-an-iscsi-target-with-freenas/">here</a>
 to add the iSCSI device to you Windows Server. Use this device as additional storage for your clients, again
 by creating a shared network drive.
 </p>
