--- a/co2516/Lab 7 - Storage.html
+++ b/co2516/Lab 7 - Storage.html
@@ -122,7 +122,7 @@ and set its address to http://10.0.1.3/</li>
 
 <div class="subtitle">Exporting an iSCSI drive</div>
 <p>
-Follow the instructions <a href="https://thesolving.com/storage/how-to-create-an-iscsi-target-with-freenas/">here</a>.
+Follow the instructions <a href="https://serenity-networks.com/how-to-create-an-iscsi-target-extent-on-freenas-9-and-previous-versions/">here</a>.
 </p>
 
 <div class="subtitle">Mounting the iSCSI drive</div>
