--- a/co2516/Lab 7 - Storage.html
+++ b/co2516/Lab 7 - Storage.html
@@ -120,17 +120,10 @@ and set its address to http://10.0.1.3/</li>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
 
-<div class="subtitle">Exporting an iSCSI drive</div>
-<p>
-Follow the instructions <a href="https://serenity-networks.com/how-to-create-an-iscsi-target-extent-on-freenas-9-and-previous-versions/">here</a>.
-</p>
-
-<div class="subtitle">Mounting the iSCSI drive</div>
+<div class="subtitle">Exporting and mounting iSCSI drive</div>
 <p>
 Follow the instructions <a href="http://thesolving.com/storage/how-to-create-an-iscsi-target-with-freenas/">here</a>
-to add the iSCSI device to you Windows Server. Use this device as additional storage for your clients, again
-by creating a shared network drive.
-</p>
+to create and then mount the drive. You should create a device extent rather than a file extent.</p>
 
 <div class="subtitle">Advanced</div>
   <li>Use the article <a href="https://thesolving.com/server-room/how-to-enable-roaming-profiles-on-windows-server-2012-r2/">here</a> to enable roaming profiles for your users.
