Update Lab 9 - Clustering.html
Fixed spelling mitake :-)

--- a/co3509/Lab 9 - Clustering.html
+++ b/co3509/Lab 9 - Clustering.html
@@ -46,7 +46,7 @@ router's address and it will cluster the two www servers to appear as a single s
 
 <div class="subtitle">Instructions</div>
 
-<li>On your router install ipvasm using apt-get.
+<li>On your router install ipvsadm using apt-get.
 </li>
 <div class="collapsible">&nbsp;</div>
 <div class="content">
