--- a/co2516/Lab 11 - HTTP.html
+++ b/co2516/Lab 11 - HTTP.html
@@ -129,7 +129,7 @@ Click on OK
 <div class="subtitle">First Python CGI</div>
 
 <li>
-Put the following python script in c:{\textbackslash}inetpub{\textbackslash}wwwroot{\textbackslash}first.py
+Put the following python script in c:\inetpub\wwwroot\first.py
 
 <pre>
 import cgi
