Update Lab 11 - HTTP.html

--- a/co2516/Lab 11 - HTTP.html
+++ b/co2516/Lab 11 - HTTP.html
@@ -101,10 +101,10 @@ In the dialog set the following options
 
 <table>
 <tr>
-  <td>Request path</td><td>.py</td>
+  <td>Request path</td><td>*.py</td>
 </tr>
 <tr>
-  <td>Executable</td><td>path to python</td>
+  <td>Executable</td><td>path to python then %s %s</td>
 </tr>
 <tr>
   <td>Name</td><td>Python</td>
