Update Lab 2 - Password Security.html

--- a/co4509/Lab 2 - Password Security.html
+++ b/co4509/Lab 2 - Password Security.html
@@ -81,7 +81,7 @@ sudo apt-get install john crunch
 
 <li>Create a new user using the following command.
 <p>
-sudo add useruser co4509
+sudo adduser co4509
 </p>
 <p>
 You will first be prompted for the password of the current account.
