Update Lab 2 - Password Security.html

--- a/co4509/Lab 2 - Password Security.html
+++ b/co4509/Lab 2 - Password Security.html
@@ -98,7 +98,7 @@ This will create an account that you can crack without accidently reveiling your
 
 <li>Next combine the password and shadow password files so that you can crack the password.
 <p>
-sudo unshadow /etc/password /etc/shadow | grep co4509 > password.db
+sudo unshadow /etc/passwd /etc/shadow | grep co4509 > password.db
 </p>
 <p>
 Note: we are using grep to filter out only the co4509 account. This means that John the Ripper won't accidently reveal your main account password.
