Update Lab 4 - Reconnaissance.html

--- a/co4509/Lab 4 - Reconnaissance.html
+++ b/co4509/Lab 4 - Reconnaissance.html
@@ -58,12 +58,12 @@ You should not target a host outside of the Lab for active probing as this could
 <div class="content">
 </div>
 
-<li>Use either http://whois.domaintools.com/ or the whois command to gather information on the University's domain.</li>
+<li>Use either <a href="http://whois.domaintools.com/">http://whois.domaintools.com/</a> or the whois command to gather information on the University's domain.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
 
-<li>Use the RIPE database at http://www.db.ripe.net/whois to find IP ranges of the University.</li>
+<li>Use the RIPE database at <a href="http://www.db.ripe.net/whois">http://www.db.ripe.net/whois</a>to find IP ranges of the University.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
@@ -79,7 +79,7 @@ At this point we are going to move into the virtual machines you have created in
 active probing which could look like an attack.
 </p>
 
-<li>Start Kali and youe CO4509 Webserver. Log into Kali Linux and find its IP address using "ip addr". Now using either ping or nmap perform a ping
+<li>Start Kali and your CO4509 Webserver. Log into Kali Linux and find its IP address using "ip addr". Now using either ping or nmap perform a ping
 sweep on from 10.0.0.1 to 10.0.0.255.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
