Update Lab 19 - Mininet.html

--- a/co3509/Lab 19 - Mininet.html
+++ b/co3509/Lab 19 - Mininet.html
@@ -43,7 +43,13 @@ In this lab you are going to start using Mininet to create a Software Defined Ne
 <p>
 Install Mininet, the package name is <b>mininet</b>. Using the 
 information from the lecture recreate the topology and scenario from 
-the assigment.
+the ns-2 lab.
+</p>
+<p>
+To run the emulation use the following
+</p>
+<p>
+sudo python script.py
 </p>
 </ol>
   </div>
