Update Lab 9 - PKI.html

--- a/co4509/Lab 9 - PKI.html
+++ b/co4509/Lab 9 - PKI.html
@@ -53,12 +53,12 @@ Using sudo apt-get install openssl.
 <div class="content">
 </div>
 
-<li>Upload your certificate to the Lab 9 Teams channel.</li>
+<li>Upload your certificate to the Week 9 Teams channel.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
 
-<li>Download someone else's certificate from the Lab 9 Teams channel and sign it. This should be someone that you don't mind sending/receiving email from.</li>
+<li>Download someone else's certificate from the Week 9 Teams channel and sign it. This should be someone that you don't mind sending/receiving email from.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
