Update Lab 1 - Manually Installing Windows.html
Updates for 2020 Hyper-V and VMWare supported.

--- a/co2516/Lab 1 - Manually Installing Windows.html
+++ b/co2516/Lab 1 - Manually Installing Windows.html
@@ -34,31 +34,16 @@
   <div id="od-loading"></div>
   <div id="od-content">
 <h1>Introduction</h1>
-This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 20161 . You will need a Windows Server 2016 R2 ISO and a product key. The ISO should be on the d: drive of the lab computer and you can use a KMS2 key from <a href ="https://docs.microsoft.com/en-us/windows-server/get-started/kmsclientkeys">Microsoft</a>.You can download the ISOs used in this module, as well as VMware Workstation from onethehub.com. Details are on Blackboard in the useful links section.
-If you have never used VMware before then I suggest you watch https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk. You do not need to install VMware Workstation in the lab as it is already installed.
+This lab introduces the use of Windows Server. You are going to install your first copy of Windows Server 2019. You will need a Windows Server 2019 ISO and a product key. The URL to the shared products has been shared with you on Blackboard and in the README on the Azure Lab Services desktop and you can use a KMS key from <a href ="https://docs.microsoft.com/en-us/windows-server/get-started/kmsclientkeys">Microsoft</a>.
+
+If you are using Azure Lab Services for the labs then please watch this video which introduces you to creating a virtual machine - <a href="https://www.linkedin.com/learning/learning-virtualization/creating-a-virtual-machine-with-hyper-v?resume=false&u=42775724">here</a>. You should create a virtual machine with 4GB of memory and using the Internal network.
+
+If you have never used VMware before then I suggest you watch <a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You should create a virtual machine, and select that you will install the operating system later. For disk size use 60GB disk, leave the setting to split. Set the memoey to 4GB and change the number of processors to 2. Change the network adapter to Host-only. Change CD/DVD to use ISO image you have downloaded.
+
+
 <h1>Instructions</h1>
 <ol id="instructions">
-  <li>Start VMware workstation and click ’Create a New Virtual Machine’. Select ’Typical (recommended)’ and click next. Select ’I will install the operating system later.’ and click Next. For the guest operating systems select Microsoft Windows and for the version select ’Windows Server 2016’ and click next.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>For the machine name use ’Windows Server 2019’, change the location to the e: drive. You should create a folder on the e: drive to store the virtual machines. Use your username as the folder name.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>Leave the disk capacity as 60 GB and leave the disk as ’Split virtual disk into multiple files’. Click Next.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>Click ’customize Hardware’. Change the Memory to 4 GB and change the number of processors to 2. Change the Network Adapter to Host-only, finally change the CD/DVD to Use ISO image file. Select the Windows Server 2016 ISO from the d: drive.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>Click ’Close’.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>Click ’Finish’.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
-  <li>Click ’Power on this Virtual Machine’.</li>
-<div class="collapsible" align="right">[help]</div>
-<div class="content"></div>
+
 <h1>Installing Windows Server 2019</h1>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
