Update Lab 2 - Recovery Partition.html
Updates for 2020

--- a/co2516/Lab 2 - Recovery Partition.html
+++ b/co2516/Lab 2 - Recovery Partition.html
@@ -135,7 +135,7 @@ disk 0<div class="collapsible" align="right">[help]</div>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
 
-  <li>From within your newly created VM log into Blackboard go to CO2516, Module Materials, Session 2 and download CloneZillaBackup.zip
+  <li>From within your newly created VM go to the shared OneDrive for the module and go into Session 2 and download CloneZillaBackup.zip
 Extract the contents of CloneZillaBackup to the Recovery drive.
 </li>
 <div class="collapsible" align="right">[help]</div>
