Update Lab 3 - Creating Usernames.html
Update.

--- a/co2516/Lab 3 - Creating Usernames.html
+++ b/co2516/Lab 3 - Creating Usernames.html
@@ -44,7 +44,7 @@ make sense (i.e. that they are valid) and it will produce a username for the use
 <div class="subtitle">Instructions</div>
 
 <p>
-In your Windows 10 Virtual Machine download and install Python 3.7 Installer from <a href="http://python.org/">here</a>.
+In your desktop computer download and install Python 3.8 Installer from <a href="http://python.org/">here</a>.
 </p>
 <p>
 The editor for Python is called IDLE. Once Python has finished installing using the search tool to start IDLE. You can use it to write and run Python programs. Since Python is a scripting
