Update Lab 6 - Disks.html
Added Hyper-V to disks

--- a/co2516/Lab 6 - Disks.html
+++ b/co2516/Lab 6 - Disks.html
@@ -36,13 +36,13 @@
 In this lab you are doing to investigate disk usage on VMWare and Windows. You will be adding a new disk to your Windows Server.
 
 <ol id="instructions">
-<div class="subtitle">Instructions</div>
+<div class="subtitle">Instructions (VMware)</div>
 
   <li>Turn off your Windows Server.</li>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
 
-  <li>Select VM &rarr; Settings</li>
+  <li>Select VM &then Settings</li>
 <div class="collapsible" align="right">[help]</div>
 <div class="content"></div>
 
@@ -69,6 +69,57 @@ In this lab you are doing to investigate disk usage on VMWare and Windows. You w
   <li>Change the file name. Replace with -0 with -1 and click Finish</li>
 <div class="collapsible" align="right">[help]</div> 
 <div class="content"></div>
+
+<div class="subtitle">Instructions (Hyper-V)</div>
+
+  <li>Turn off your Windows Server.</li>
+<div class="collapsible" align="right">[help]</div>
+<div class="content"></div>
+
+  <li>Select your VM then Settings</li>
+<div class="collapsible" align="right">[help]</div>
+<div class="content"></div>
+
+  <li>Select Add Hardware</li>
+<div class="collapsible" align="right">[help]</div>
+<div class="content"></div>
+
+  <li>Highlight SCSI Controller and click Add</li>
+<div class="collapsible" align="right">[help]</div>
+<div class="content"></div>
+
+  <li>Select Hard Drive and click Add</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Select Virtual hard disk and click New</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Click Next</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Highlight VHDX and click Next</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Click Next</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Click Next</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Select Create a new blank virtual hard disk and click Next</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
+  <li>Click Finish</li>
+<div class="collapsible" align="right">[help]</div> 
+<div class="content"></div>
+
 
 <div class="subtitle">Software configuration</div>
 
