Update Lab 2 - Password Security.html
Change of URL for oph crack password tutorial.

--- a/co4509/Lab 2 - Password Security.html
+++ b/co4509/Lab 2 - Password Security.html
@@ -235,7 +235,7 @@ Note this will take several hours to crack. You might want to edit down the pass
 <div class="subtitle">Additional</div>
 
 <li>Ophcrack can be used to crack Windows 10 passwords. Try using it to crack a Windows 10 machine. Do not try to crack the lab machines - the password aren't stored locally so it won't work.
-You can use either Lab services. See <a href="https://www.lifewire.com/how-to-recover-passwords-using-ophcrack-livecd-2626168">https://www.lifewire.com/how-to-recover-passwords-using-ophcrack-livecd-2626168</a> for a tutorial
+You can use either Lab services. See <a href="https://www.passmoz.com/how-to-use-ophcrack.html">https://www.passmoz.com/how-to-use-ophcrack.html</a> for a tutorial
 on how to do it.
 </li>
 <div class="collapsible" align="right">&nbsp;</div>
