Update Lab 2 - Password Security.html
Added extra instruction that should work for 20.04 and not cause a problem for 18.04.

--- a/co4509/Lab 2 - Password Security.html
+++ b/co4509/Lab 2 - Password Security.html
@@ -71,6 +71,15 @@ Commonly there are 95 symbols that can be entered from a standard keyboard. Give
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content"></div>
 
+<li>Update the application repository using the following command
+<p>
+sudo apt-get update
+</p>
+</li>
+<div class="collapsible" align="right">&nbsp;</div>
+<div class="content"></div>
+
+
 <li>Install John the ripper using the following command.
 <p>
 sudo apt-get install john crunch
