Update Lab 7 - Encryption.html

--- a/co4509/Lab 7 - Encryption.html
+++ b/co4509/Lab 7 - Encryption.html
@@ -41,12 +41,12 @@ In this lab you are going to examine some encryption techniques using <a href="h
 
 <div class="subtitle">Instructions</div>
 
-<li>Using Cryptool Online (<a href="http://www.cryptool-online.org/">here</a>) click Ciphers then Caesar.</li>
+<li>Using Cryptool Online (<a href="http://www.cryptool-online.org/">here</a>) search for monoalphabetic substitution.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
 
-<li>Read the Description on the Caesar Cipher so you understand how it is working.</li>
+<li>Read the Description so you understand how it is working.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
@@ -56,12 +56,7 @@ In this lab you are going to examine some encryption techniques using <a href="h
 <div class="content">
 </div>
 
-<li>Click Rot-13 at the bottom of the page.</li>
-<div class="collapsible" align="right">&nbsp;</div>
-<div class="content">
-</div>
-
-<li>Then click parse alphabet and enable Lower case and disable Upper case.</li>
+<li>Configure the cipher so it is a ROT-13.</li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
 </div>
@@ -83,7 +78,7 @@ In this lab you are going to examine some encryption techniques using <a href="h
 <div class="content">
 </div>
 
-<li>Repeat the process with Monoalphabetic Substitution
+<li>Repeat the process with other Monoalphabetic Substitution
 </li>
 <div class="collapsible" align="right">&nbsp;</div>
 <div class="content">
