Update Lab 1 - Manually Installing Windows.html
Fixed a spelling mistake.

--- a/co2516/Lab 1 - Manually Installing Windows.html
+++ b/co2516/Lab 1 - Manually Installing Windows.html
@@ -38,7 +38,7 @@ This lab introduces the use of Windows Server. You are going to install your fir
 
 If you are using Azure Lab Services for the labs then please watch this video which introduces you to creating a virtual machine - <a href="https://www.linkedin.com/learning/learning-virtualization/creating-a-virtual-machine-with-hyper-v?resume=false&u=42775724">here</a>. You should create a virtual machine with 4GB of memory and using the Internal network.
 
-If you have never used VMware before then I suggest you watch <a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You should create a virtual machine, and select that you will install the operating system later. For disk size use 60GB disk, leave the setting to split. Set the memoey to 4GB and change the number of processors to 2. Change the network adapter to Host-only. Change CD/DVD to use ISO image you have downloaded.
+If you have never used VMware before then I suggest you watch <a href="https://www.lynda.com/Fusion-tutorials/Installing-VMware-Workstation/163066/175191-4.html?org=uclan.ac.uk">this</a>. You should create a virtual machine, and select that you will install the operating system later. For disk size use 60GB disk, leave the setting to split. Set the memory to 4GB and change the number of processors to 2. Change the network adapter to Host-only. Change CD/DVD to use ISO image you have downloaded.
 
 
 <h1>Instructions</h1>
